<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/background_login">
	<!-- 登录框 -->
	<RelativeLayout android:id="@+id/login_div"
		android:layout_width="fill_parent" android:padding="15dp"
		android:layout_margin="15dp" android:background="@drawable/background_login_div_bg"
		android:layout_height="233dp">
		<!-- 用户名 text -->
		<TextView android:id="@+id/login_user_input"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_alignParentTop="true" android:layout_marginTop="5dp"
			android:text="@string/login_label_username" style="@style/normalText" />
		<!-- TODO: disable auto correct. -->
		<!-- 用户名 input -->
		<EditText android:id="@+id/username_edit"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/login_user_input" android:singleLine="true"
			android:inputType="text" android:hint="@string/login_input_username" />
		<!-- 密码 text -->
		<TextView android:id="@+id/login_password_input"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@id/username_edit" android:layout_marginTop="3dp"
			android:text="@string/login_label_password" style="@style/normalText" />
		<!-- 密码 input -->
		<EditText android:id="@+id/password_edit"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/login_password_input" android:password="true"
			android:singleLine="true" android:inputType="textPassword"
			android:hint="@string/login_input_password" />
		<!-- 登陆 button -->
		<Button android:id="@+id/signin_button" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_below="@id/password_edit"
			android:layout_alignRight="@id/password_edit"
			android:layout_marginTop="10dp" android:text="@string/login_label_signin"
			style="@style/blue_button" />
		<!-- 提示栏 -->
		<TextView android:layout_width="wrap_content" android:id="@+id/progress_text"
			android:layout_height="wrap_content" android:autoLink="web"
			android:textColor="#888" android:clickable="true" android:gravity="bottom"
			android:textSize="13dp" android:layout_alignParentBottom="true"
			android:layout_alignLeft="@+id/password_edit"></TextView>
		<CheckBox android:layout_width="wrap_content" android:id="@+id/checkBox1" android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/signin_button"
			android:layout_alignBottom="@+id/signin_button"
			android:layout_alignLeft="@+id/progress_text" style="@style/checkbox" android:text="@string/login_jizhu_password"></CheckBox>
		<CheckBox android:layout_width="wrap_content" android:id="@+id/checkBox2" style="@style/checkbox"
	android:layout_height="wrap_content" android:layout_alignBaseline="@+id/signin_button"
			android:layout_alignBottom="@+id/signin_button"
	android:layout_centerHorizontal="true" android:text="@string/login_auto_login"></CheckBox>
	</RelativeLayout>

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1" android:background="@drawable/background_login_footer">
		<TextView android:id="@+id/register_link" android:text="@string/login_register_link"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="15dp" android:textColor="#888"
			android:textColorLink="@color/link_color" />
	</RelativeLayout>
</LinearLayout>

